# taskzip

./: Cargo.toml  assist.go  cli.go  go.mod  go.sum  main.go  overview.go  readme.md  rewrite.go  transform.go  validate.go
.cursor/rules/: 24-line-functions.mdc  concise-error-msgs.mdc  error-wrapping.mdc  little-comments.mdc  lowercase-logs.mdc  no-validation-tests.mdc  terse-err-msgs.mdc
assist/: assist.go
common/errwrap/: wrap.go  wrap_test.go
common/etrace/: e_test.go  errors.go  etrace.go
common/fn/: funk.go
common/iso639/: list.go
common/zips/: unzip.go
src/: check.rs  exec.rs  generate.rs  lib.rs  main.rs  meta.rs  package.rs  run.rs  score.rs
taskfs/: read.go  read_test.go  task.go  toml.go  utils.go  write.go  write_test.go
taskfs/testdata/kvadrputekl/: readme.md  task.toml  testgroups.txt
taskfs/testdata/kvadrputekl/archive/: task.yaml
taskfs/testdata/kvadrputekl/archive/riki/: 00_gen_params.py
taskfs/testdata/kvadrputekl/archive/riki/og_tests/: kp.i00
taskfs/testdata/kvadrputekl/examples/: 001.md
taskfs/testdata/kvadrputekl/solutions/: kp_kp_tle.cpp
taskfs/testdata/kvadrputekl/statement/: lv.md
taskfs/testdata/kvadrputekl/testlib/: checker.cpp
taskfs/testdata/kvadrputekl/tests/: 001_c.in  002_a.in  002_b.in  002_c.in  004i.txt
tests/: cli.rs
tests/fixtures/addtwo/: task.toml
tests/fixtures/addtwo/.taskzip/: generate-cache.json
tests/fixtures/addtwo/solutions/: add.cpp
tests/fixtures/addtwo/statement/: en.md
tests/fixtures/addtwo/testspec/: generator.cpp  tests.txt
