[package]
name = "taskzip"
version = "0.1.0"
edition = "2021"

[lib]
name = "taskzip"
path = "src/lib.rs"

[[bin]]
name = "taskzip"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
toml = "0.8"
walkdir = "2"
zip = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
